hphp/test/slow/packages/requirepackage/parse_errors/parse_errors3.php.inc
<?hh

<<__RequirePackage('foo', 42)>>
function cpe() : void {}
